objects/kugo2p__AdditionalAccountDetail__c.object
<CustomObject>
    <description>Kugamon - Related object to Salesforce Account that handles Kugamon Account data points. Kugamon does not add fields to Account object. Set data points such as key Contacts,  Billing and Tax information. Only one Additional Account Info record allowed for a given Salesforce Account.</description>
    <fields>
        <fullName>kuga_sub__RenewalPriceUpliftPercent__c</fullName>
        <inlineHelpText>Default Value comes from Kugamon Settings</inlineHelpText>
        <label>Renewal Price Uplift Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__AccountBalance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Account Balance calculations are based on Orders only. Balance is added on Approved and Released Orders and subtracted on Cancelled and Deleted Orders.</description>
        <inlineHelpText>Account Balance calculations are based on Orders only. Balance is added on Approved and Released Orders and subtracted on Cancelled and Deleted Orders.</inlineHelpText>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Account__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Account Info</relationshipLabel>
        <relationshipName>Account_Order_and_Billing_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__AccountingGroup__c</fullName>
        <label>Accounting Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Sale</fullName>
                </value>
                <value>
                    <fullName>Consumer Sale</fullName>
                </value>
                <value>
                    <fullName>Internal Sale</fullName>
                </value>
                <value>
                    <fullName>Reseller Sale</fullName>
                </value>
                <value>
                    <fullName>Partner Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__BillingFrequency__c</fullName>
        <formula>IF(
  TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c) == &apos;Daily&apos;,
  &apos;Daily&apos;,
  IF(
    TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c) == &apos;Weekly&apos;,
    &apos;Weekly&apos;,
    IF(
      TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c) == &apos;Monthly&apos;,
      &apos;Monthly&apos;,
      IF(
        TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c) == &apos;Quarterly&apos;,
        &apos;Quarterly&apos;,
        IF(
          TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c) == &apos;Semi-Annually&apos;,
          &apos;Semi-Annually&apos;,
          IF(
            TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c) == &apos;Annually&apos;,
            &apos;Annually&apos;,
            IF(
              NOT(ISBLANK(TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c))),
              TEXT(kugo2p__InvoiceSchedule__r.kugo2p__SchedulePeriod__c),
              &apos;One-Time&apos;
            )
          )
        )
      )
    )
  )
)</formula>
        <label>Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__BillingMethod__c</fullName>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Email and Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>kugo2p__Carrier__c</referenceTo>
        <relationshipName>Additional_Account_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ContactBilling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Billing</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Order_and_Billing_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ContactBuying__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Buying</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Order_and_Billing_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ContactShipping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Shipping</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Order_and_Billing_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__CreditAvailable__c</fullName>
        <formula>kugo2p__CreditLimit__c - kugo2p__AccountBalance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__CreditLimit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__CreditTerms__c</fullName>
        <label>Credit Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Check Required</fullName>
                </value>
                <value>
                    <fullName>On Credit Hold</fullName>
                </value>
                <value>
                    <fullName>No Credit Check Required</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__DaysTillPaymentDue__c</fullName>
        <inlineHelpText>Default value for payment due date calculation; should match the Payment Terms value. Default Days Till Payment Due value is based from Kugamon Settings.</inlineHelpText>
        <label>Days Till Payment Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__DeliveryTerms__c</fullName>
        <label>Delivery Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FOB Destination</fullName>
                </value>
                <value>
                    <fullName>FOB Origin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__DiscountPercent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__HaltReason__c</fullName>
        <label>Halt Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Closed</fullName>
                </value>
                <value>
                    <fullName>Account Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__IgnoreParentAccountPricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Account Pricing for Parent Account ignored in Quote and Order configurator page</description>
        <inlineHelpText>If checked, Account Pricing for Parent Account ignored in Quote and Order configurator page</inlineHelpText>
        <label>Ignore Parent Account Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Schedule</label>
        <referenceTo>kugo2p__InvoiceSchedule__c</referenceTo>
        <relationshipName>Invoice_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Debit/Credit Card</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due Upon Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 7 Days</fullName>
                </value>
                <value>
                    <fullName>Net 10 Days</fullName>
                </value>
                <value>
                    <fullName>Net 30 Days</fullName>
                </value>
                <value>
                    <fullName>Net 45 Days</fullName>
                </value>
                <value>
                    <fullName>Net 60 Days</fullName>
                </value>
                <value>
                    <fullName>Net 90 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__PriceBookName__c</fullName>
        <description>Default Price Book for subsequent Opportunities, Quotes, and Orders. Please use [Choose Price Book] button to change the Price Book. This field is replaced by the Price Book lookup field.</description>
        <label>Price Book Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Pricebook2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default Price Book for subsequent Opportunities, Quotes, and Orders. Please use [Choose Price Book] button to change the Price Book.</description>
        <inlineHelpText>Default Price Book for subsequent Opportunities, Quotes, and Orders. Please use [Choose Price Book] button to change the Price Book.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Additional Account Info</relationshipLabel>
        <relationshipName>Additional_Account_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__PrintSpecificTextandTerms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Specific Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__ResaleCertificateExpires__c</fullName>
        <label>Resale Certificate Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__ResaleCertificate__c</fullName>
        <label>Resale Certificate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesRegion__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__SalesTerritory__c</fullName>
        <label>Sales Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__SpecificTextandTerms__c</fullName>
        <label>Specific Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Location</label>
        <referenceTo>kugo2p__TaxLocation__c</referenceTo>
        <relationshipName>Additional_Account_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableExcise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Excise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableSales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable VAT/GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATExemptReason__c</fullName>
        <label>VAT Exempt Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATRegistration__c</fullName>
        <label>VAT Registration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>kugo2p__Warehouse__c</referenceTo>
        <relationshipName>Additional_Account_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Additional Account Info</label>
    <listViews>
        <fullName>kugo2p__AllAccounts</fullName>
        <columns>NAME</columns>
        <columns>kugo2p__TaxLocation__c</columns>
        <columns>kugo2p__AccountBalance__c</columns>
        <columns>kugo2p__PriceBookName__c</columns>
        <columns>kugo2p__SpecificTextandTerms__c</columns>
        <columns>kugo2p__InvoiceSchedule__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reference Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Account Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>kugo2p__CreditLimitNegativeCheck</fullName>
        <active>true</active>
        <errorConditionFormula>kugo2p__CreditLimit__c &lt;0</errorConditionFormula>
        <errorDisplayField>kugo2p__CreditLimit__c</errorDisplayField>
        <errorMessage>Must Have a Credit Limit of $0 or Higher</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>kugo2p__VATExemptReasonCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND (kugo2p__VATExemptReason__c &lt;&gt; null, kugo2p__TaxableVAT__c = true)</errorConditionFormula>
        <errorDisplayField>kugo2p__VATExemptReason__c</errorDisplayField>
        <errorMessage>VAT Exempt Reason Must Be Blank If Taxable VAT is checked</errorMessage>
    </validationRules>
</CustomObject>